// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dateRangeFieldSetConstants analyticsDateRangeOptions calculated date range should match snapshot 1`] = `
Array [
  Array [
    "Yesterday",
    Object {
      "end": "01/19/2019",
      "start": "01/19/2019",
    },
  ],
  Array [
    "This Week",
    Object {
      "end": "01/26/2019",
      "start": "01/20/2019",
    },
  ],
  Array [
    "Last Week",
    Object {
      "end": "01/19/2019",
      "start": "01/13/2019",
    },
  ],
  Array [
    "This Month",
    Object {
      "end": "01/31/2019",
      "start": "01/01/2019",
    },
  ],
  Array [
    "Last Month",
    Object {
      "end": "12/31/2018",
      "start": "12/01/2018",
    },
  ],
  Array [
    "Custom",
    undefined,
  ],
  Array [
    "This Year",
    Object {
      "end": "12/31/2019",
      "start": "01/01/2019",
    },
  ],
  Array [
    "Last Year",
    Object {
      "end": "12/31/2018",
      "start": "01/01/2018",
    },
  ],
]
`;

exports[`dateRangeFieldSetConstants emailCampaignDateRangeOptions calculated date range should match snapshot 1`] = `
Array [
  Array [
    "Yesterday",
    Object {
      "end": "01/19/2019",
      "start": "01/19/2019",
    },
  ],
  Array [
    "This Week",
    Object {
      "end": "01/26/2019",
      "start": "01/20/2019",
    },
  ],
  Array [
    "Last Week",
    Object {
      "end": "01/19/2019",
      "start": "01/13/2019",
    },
  ],
  Array [
    "This Month",
    Object {
      "end": "01/31/2019",
      "start": "01/01/2019",
    },
  ],
  Array [
    "Last Month",
    Object {
      "end": "12/31/2018",
      "start": "12/01/2018",
    },
  ],
  Array [
    "Custom",
    undefined,
  ],
  Array [
    "All Time",
    Object {
      "end": "01/20/2019",
      "start": "04/01/2018",
    },
  ],
]
`;

exports[`dateRangeFieldSetConstants textCampaignDateRangeOptions calculated date range should match snapshot 1`] = `
Array [
  Array [
    "Yesterday",
    Object {
      "end": "01/19/2019",
      "start": "01/19/2019",
    },
  ],
  Array [
    "This Week",
    Object {
      "end": "01/26/2019",
      "start": "01/20/2019",
    },
  ],
  Array [
    "Last Week",
    Object {
      "end": "01/19/2019",
      "start": "01/13/2019",
    },
  ],
  Array [
    "This Month",
    Object {
      "end": "01/31/2019",
      "start": "01/01/2019",
    },
  ],
  Array [
    "Last Month",
    Object {
      "end": "12/31/2018",
      "start": "12/01/2018",
    },
  ],
  Array [
    "Custom",
    undefined,
  ],
  Array [
    "All Time",
    Object {
      "end": "01/20/2019",
      "start": "01/01/2018",
    },
  ],
  Array [
    "This Year",
    Object {
      "end": "12/31/2019",
      "start": "01/01/2019",
    },
  ],
  Array [
    "Last Year",
    Object {
      "end": "12/31/2018",
      "start": "01/01/2018",
    },
  ],
]
`;
